# offline-bitcoin-atm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: board.rs  coins.rs  config.rs  config_portal.html  display.rs  lib.rs  lnurl.rs  main.rs  mempool.rs  orangeclock_icons.rs  state.rs  util.rs  wifi.rs
src/display/: epd1in54.rs  epd2in13.rs  epd2in7_bw.rs  epd2in7_tricolor.rs  mod.rs  rendering.rs
src/templates/: config_portal.html
telegram_notification_bot/: README.md  main.py
web-flasher/: index.html
