[package]
name = "offline-bitcoin-atm"
version = "0.1.0"
authors = ["user <f@f321x.com>"]
edition = "2021"
resolver = "2"

[lib]  # lib is only to run unittests on x86 (host)
name = "offline_bitcoin_atm"
path = "src/lib.rs"

[[bin]]
name = "offline-bitcoin-atm"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp"]

esp = ["esp-idf-svc", "epd-waveshare", "esp-idf-hal", "embedded-graphics", "embedded-hal", "percent-encoding"]
experimental = ["esp-idf-svc/experimental"]
esp-idf-svc = ["dep:esp-idf-svc"]

[dependencies]
log = "0.4"
aes = "0.8.4"
rand = "0.10.0"
md-5 = "0.10.6"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
qrcode = { version = "0.14.1", default-features = false }
base64 = "0.22.1"
bech32 = "0.11.1"

percent-encoding = { version = "2.3", optional = true }

# ESP32-specific dependencies
esp-idf-svc = { version = "0.52.1", optional = true }
# Git dep for unreleased epd2in7 (monochrome 2.7") driver (merged in commit 1e525bb).
# All display drivers compile unconditionally; only "graphics" feature matters.
epd-waveshare = { git = "https://github.com/rust-embedded-community/epd-waveshare", rev = "1e525bb", optional = true, default-features = false, features = ["epd2in13_v2", "graphics"] }
embedded-graphics = { version = "0.8.2", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
esp-idf-hal = { version = "0.46.2", optional = true }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33.1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8" }